--- a/src/output.css
+++ b/src/output.css
@@ -648,6 +648,10 @@ video {
   right: 2.5rem;
 }
 
+.right-8 {
+  right: 2rem;
+}
+
 .right-\[5\%\] {
   right: 5%;
 }
@@ -664,12 +668,28 @@ video {
   top: 50%;
 }
 
+.top-16 {
+  top: 4rem;
+}
+
 .top-2 {
   top: 0.5rem;
 }
 
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
 .top-\[60\%\] {
   top: 60%;
+}
+
+.top-10 {
+  top: 2.5rem;
 }
 
 .z-0 {
@@ -708,6 +728,26 @@ video {
   order: -2;
 }
 
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.mx-32 {
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-\[10\%\] {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -721,6 +761,16 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .-mb-72 {
@@ -743,20 +793,40 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .ml-6 {
   margin-left: 1.5rem;
 }
 
+.ml-\[10\%\] {
+  margin-left: 10%;
+}
+
 .mr-5 {
   margin-right: 1.25rem;
 }
 
+.mr-\[10\%\] {
+  margin-right: 10%;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-16 {
@@ -787,16 +857,20 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.ml-\[10\] {
+  margin-left: 10;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .flex {
   display: flex;
-}
-
-.table {
-  display: table;
-}
-
-.grid {
-  display: grid;
 }
 
 .hidden {
@@ -807,8 +881,16 @@ video {
   height: 3rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .h-60 {
   height: 15rem;
+}
+
+.h-72 {
+  height: 18rem;
 }
 
 .h-\[100vh\] {
@@ -827,6 +909,14 @@ video {
   height: 60vh;
 }
 
+.h-\[70vh\] {
+  height: 70vh;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
 .h-full {
   height: 100%;
 }
@@ -839,8 +929,16 @@ video {
   width: 50%;
 }
 
+.w-1\/4 {
+  width: 25%;
+}
+
 .w-1\/5 {
   width: 20%;
+}
+
+.w-2\/4 {
+  width: 50%;
 }
 
 .w-2\/5 {
@@ -863,6 +961,22 @@ video {
   width: 80%;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
 .w-\[30\%\] {
   width: 30%;
 }
@@ -875,6 +989,10 @@ video {
   width: 56%;
 }
 
+.w-\[60\%\] {
+  width: 60%;
+}
+
 .w-\[70\%\] {
   width: 70%;
 }
@@ -885,6 +1003,10 @@ video {
 
 .w-\[76\%\] {
   width: 76%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .w-auto {
@@ -900,12 +1022,8 @@ video {
   width: 100%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
-.w-1\/4 {
-  width: 25%;
+.w-80 {
+  width: 20rem;
 }
 
 .-translate-x-2\/4 {
@@ -958,8 +1076,12 @@ video {
   gap: 2.5rem;
 }
 
-.gap-16 {
-  gap: 4rem;
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-20 {
@@ -980,14 +1102,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .space-y-7 > :not([hidden]) ~ :not([hidden]) {
@@ -1032,6 +1146,10 @@ video {
   border-width: 2px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1040,12 +1158,18 @@ video {
   border-right-width: 2px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-none {
   border-style: none;
+}
+
+.border-\[\#2DAE49\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(45 174 73 / var(--tw-border-opacity));
+}
+
+.border-\[\#8a8a8a\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(138 138 138 / var(--tw-border-opacity));
 }
 
 .border-gray-400 {
@@ -1078,6 +1202,16 @@ video {
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F5F5F5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e6e4e4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 228 228 / var(--tw-bg-opacity));
+}
+
 .bg-customBlue {
   --tw-bg-opacity: 1;
   background-color: rgb(127 219 197 / var(--tw-bg-opacity));
@@ -1101,6 +1235,14 @@ video {
   padding: 0.5rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -1118,6 +1260,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-7 {
@@ -1191,6 +1338,18 @@ video {
   padding-inline-start: 1.5rem;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -1211,12 +1370,8 @@ video {
   padding-top: 2rem;
 }
 
-.pt-\[3\%\] {
-  padding-top: 3%;
-}
-
-.pt-\[6\%\] {
-  padding-top: 6%;
+.pl-\[10\%\] {
+  padding-left: 10%;
 }
 
 .text-center {
@@ -1279,6 +1434,11 @@ video {
   color: rgb(61 61 61 / var(--tw-text-opacity));
 }
 
+.text-\[\#424242\] {
+  --tw-text-opacity: 1;
+  color: rgb(66 66 66 / var(--tw-text-opacity));
+}
+
 .text-\[\#494949\] {
   --tw-text-opacity: 1;
   color: rgb(73 73 73 / var(--tw-text-opacity));
@@ -1289,9 +1449,9 @@ video {
   color: rgb(126 124 124 / var(--tw-text-opacity));
 }
 
-.text-\[\#868484\] {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(134 132 132 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -1302,26 +1462,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#272727\] {
-  --tw-text-opacity: 1;
-  color: rgb(39 39 39 / var(--tw-text-opacity));
-}
-
-.text-\[\#424242\] {
-  --tw-text-opacity: 1;
-  color: rgb(66 66 66 / var(--tw-text-opacity));
-}
-
-.text-\[\#f3e9e9\] {
-  --tw-text-opacity: 1;
-  color: rgb(243 233 233 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1362,6 +1502,10 @@ video {
       max-width: 1536px;
     }
   }
+}
+
+.hover\:border:hover {
+  border-width: 1px;
 }
 
 @media (min-width: 640px) {
@@ -1465,20 +1609,8 @@ video {
     width: 100%;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:items-end {
-    align-items: flex-end;
-  }
-
-  .md\:justify-end {
-    justify-content: flex-end;
   }
 
   .md\:justify-between {
@@ -1493,16 +1625,8 @@ video {
     gap: 3rem;
   }
 
-  .md\:gap-20 {
-    gap: 5rem;
-  }
-
   .md\:gap-24 {
     gap: 6rem;
-  }
-
-  .md\:gap-8 {
-    gap: 2rem;
   }
 
   .md\:self-auto {
@@ -1534,11 +1658,6 @@ video {
     line-height: 2rem;
   }
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1556,6 +1675,14 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:static {
+    position: static;
+  }
+
+  .lg\:absolute {
+    position: absolute;
+  }
+
   .lg\:left-0 {
     left: 0px;
   }
@@ -1621,6 +1748,16 @@ video {
     margin-right: auto;
   }
 
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .lg\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
   .lg\:mr-0 {
     margin-right: 0px;
   }
@@ -1633,12 +1770,36 @@ video {
     margin-top: 5rem;
   }
 
+  .lg\:mt-auto {
+    margin-top: auto;
+  }
+
+  .lg\:mt-16 {
+    margin-top: 4rem;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:flex {
     display: flex;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-\[100vh\] {
+    height: 100vh;
+  }
+
+  .lg\:h-\[370px\] {
+    height: 370px;
   }
 
   .lg\:h-\[64\.208rem\] {
@@ -1651,6 +1812,18 @@ video {
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
+  }
+
+  .lg\:w-4\/5 {
+    width: 80%;
   }
 
   .lg\:w-\[15\.59\%\] {
@@ -1686,6 +1859,14 @@ video {
     width: 100%;
   }
 
+  .lg\:w-60 {
+    width: 15rem;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
   .lg\:flex-1 {
     flex: 1 1 0%;
   }
@@ -1714,12 +1895,35 @@ video {
     gap: 4rem;
   }
 
+  .lg\:gap-20 {
+    gap: 5rem;
+  }
+
   .lg\:gap-28 {
     gap: 7rem;
   }
 
+  .lg\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
   .lg\:p-10 {
     padding: 2.5rem;
+  }
+
+  .lg\:p-0 {
+    padding: 0px;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
   .lg\:ps-0 {
@@ -1733,6 +1937,10 @@ video {
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:font-semibold {
+    font-weight: 600;
   }
 }
 
@@ -1749,25 +1957,11 @@ video {
     --tw-translate-x: -33.333333%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
-
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
 }
 
 @media (min-width: 1536px) {
   .\32xl\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .\32xl\:w-3\/5 {
-    width: 60%;
   }
 
   .\32xl\:-translate-x-1\/2 {
