--- a/src/output.css
+++ b/src/output.css
@@ -554,40 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .absolute {
   position: absolute;
 }
@@ -600,50 +566,6 @@ video {
   position: sticky;
 }
 
-.inset-0 {
-  inset: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-\[11\%\] {
-  bottom: 11%;
-}
-
-.bottom-\[17\%\] {
-  bottom: 17%;
-}
-
-.bottom-\[26\%\] {
-  bottom: 26%;
-}
-
-.bottom-\[4\.7\%\] {
-  bottom: 4.7%;
-}
-
-.bottom-\[7\.5\%\] {
-  bottom: 7.5%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.left-\[3\%\] {
-  left: 3%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
 .right-10 {
   right: 2.5rem;
 }
@@ -652,28 +574,12 @@ video {
   right: 2rem;
 }
 
-.right-\[5\%\] {
-  right: 5%;
-}
-
-.right-\[9\%\] {
-  right: 9%;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.top-1\/2 {
-  top: 50%;
+.top-10 {
+  top: 2.5rem;
 }
 
 .top-16 {
   top: 4rem;
-}
-
-.top-2 {
-  top: 0.5rem;
 }
 
 .top-5 {
@@ -682,50 +588,6 @@ video {
 
 .top-6 {
   top: 1.5rem;
-}
-
-.top-\[60\%\] {
-  top: 60%;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
-.z-30 {
-  z-index: 30;
-}
-
-.z-\[-10\] {
-  z-index: -10;
-}
-
-.z-\[10\] {
-  z-index: 10;
-}
-
-.z-\[2\] {
-  z-index: 2;
-}
-
-.z-\[3\] {
-  z-index: 3;
-}
-
-.z-\[4\] {
-  z-index: 4;
-}
-
-.z-\[5\] {
-  z-index: 5;
-}
-
-.-order-2 {
-  order: -2;
 }
 
 .mx-10 {
@@ -753,6 +615,11 @@ video {
   margin-right: auto;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -763,34 +630,8 @@ video {
   margin-bottom: auto;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
-.-mb-72 {
-  margin-bottom: -18rem;
-}
-
-.-ml-6 {
-  margin-left: -1.5rem;
-}
-
 .-mt-2 {
   margin-top: -0.5rem;
-}
-
-.-mt-52 {
-  margin-top: -13rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mb-16 {
@@ -801,12 +642,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .ml-\[10\%\] {
@@ -833,40 +674,20 @@ video {
   margin-top: 4rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
 }
 
-.ml-\[10\] {
-  margin-left: 10;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .flex {
@@ -877,16 +698,8 @@ video {
   display: none;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-36 {
   height: 9rem;
-}
-
-.h-60 {
-  height: 15rem;
 }
 
 .h-72 {
@@ -895,10 +708,6 @@ video {
 
 .h-\[100vh\] {
   height: 100vh;
-}
-
-.h-\[1063px\] {
-  height: 1063px;
 }
 
 .h-\[370px\] {
@@ -919,10 +728,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
 }
 
 .w-1\/2 {
@@ -977,71 +782,16 @@ video {
   width: 18rem;
 }
 
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-\[42\%\] {
-  width: 42%;
-}
-
-.w-\[56\%\] {
-  width: 56%;
-}
-
 .w-\[60\%\] {
   width: 60%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[73\.5\%\] {
-  width: 73.5%;
-}
-
-.w-\[76\%\] {
-  width: 76%;
 }
 
 .w-\[80\%\] {
   width: 80%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.-translate-x-2\/4 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.list-decimal {
-  list-style-type: decimal;
-}
-
-.list-disc {
-  list-style-type: disc;
 }
 
 .flex-row {
@@ -1050,18 +800,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1096,10 +834,6 @@ video {
   gap: 1.25rem;
 }
 
-.gap-7 {
-  gap: 1.75rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
@@ -1108,22 +842,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
-}
-
-.self-start {
-  align-self: flex-start;
-}
-
-.self-end {
-  align-self: flex-end;
-}
-
-.self-center {
-  align-self: center;
-}
-
-.justify-self-end {
-  justify-self: end;
 }
 
 .rounded-3xl {
@@ -1227,10 +945,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-12 {
-  padding: 3rem;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -1267,11 +981,6 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1287,11 +996,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1302,40 +1006,16 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
-}
-
-.pe-16 {
-  padding-inline-end: 4rem;
 }
 
 .pl-10 {
   padding-left: 2.5rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
 .pr-16 {
   padding-right: 4rem;
-}
-
-.ps-10 {
-  padding-inline-start: 2.5rem;
-}
-
-.ps-4 {
-  padding-inline-start: 1rem;
-}
-
-.ps-6 {
-  padding-inline-start: 1.5rem;
 }
 
 .pt-10 {
@@ -1350,36 +1030,12 @@ video {
   padding-top: 5rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
 .pt-32 {
   padding-top: 8rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pl-\[10\%\] {
-  padding-left: 10%;
-}
-
 .text-center {
   text-align: center;
-}
-
-.text-end {
-  text-align: end;
 }
 
 .text-2xl {
@@ -1464,288 +1120,13 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
-}
-
-@media (min-width: 768px) {
-  .md\:container {
-    width: 100%;
-  }
-
-  @media (min-width: 640px) {
-    .md\:container {
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .md\:container {
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .md\:container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .md\:container {
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1536px) {
-    .md\:container {
-      max-width: 1536px;
-    }
-  }
-}
-
 .hover\:border:hover {
   border-width: 1px;
-}
-
-@media (min-width: 640px) {
-  .sm\:left-1\/2 {
-    left: 50%;
-  }
-
-  .sm\:w-3\/4 {
-    width: 75%;
-  }
-
-  .sm\:-translate-x-1\/2 {
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:flex-col {
-    flex-direction: column;
-  }
-
-  .sm\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:static {
-    position: static;
-  }
-
-  .md\:bottom-\[12\%\] {
-    bottom: 12%;
-  }
-
-  .md\:bottom-\[19\%\] {
-    bottom: 19%;
-  }
-
-  .md\:bottom-\[29\%\] {
-    bottom: 29%;
-  }
-
-  .md\:bottom-\[43\%\] {
-    bottom: 43%;
-  }
-
-  .md\:bottom-\[8\.2\%\] {
-    bottom: 8.2%;
-  }
-
-  .md\:top-0 {
-    top: 0px;
-  }
-
-  .md\:order-1 {
-    order: 1;
-  }
-
-  .md\:-mb-72 {
-    margin-bottom: -18rem;
-  }
-
-  .md\:mr-8 {
-    margin-right: 2rem;
-  }
-
-  .md\:mt-40 {
-    margin-top: 10rem;
-  }
-
-  .md\:block {
-    display: block;
-  }
-
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-
-  .md\:h-96 {
-    height: 24rem;
-  }
-
-  .md\:min-h-screen {
-    min-height: 100vh;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-\[9\%\] {
-    width: 9%;
-  }
-
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between;
-  }
-
-  .md\:gap-10 {
-    gap: 2.5rem;
-  }
-
-  .md\:gap-12 {
-    gap: 3rem;
-  }
-
-  .md\:gap-24 {
-    gap: 6rem;
-  }
-
-  .md\:self-auto {
-    align-self: auto;
-  }
-
-  .md\:p-0 {
-    padding: 0px;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0px;
-  }
-
-  .md\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .md\:pt-2 {
-    padding-top: 0.5rem;
-  }
-
-  .md\:text-end {
-    text-align: end;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
 }
 
 @media (min-width: 1024px) {
   .lg\:static {
     position: static;
-  }
-
-  .lg\:absolute {
-    position: absolute;
-  }
-
-  .lg\:left-0 {
-    left: 0px;
-  }
-
-  .lg\:left-\[13\.04\%\] {
-    left: 13.04%;
-  }
-
-  .lg\:left-\[20\.54\%\] {
-    left: 20.54%;
-  }
-
-  .lg\:left-\[39\.56\%\] {
-    left: 39.56%;
-  }
-
-  .lg\:left-\[41\.22\%\] {
-    left: 41.22%;
-  }
-
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:top-0 {
-    top: 0px;
-  }
-
-  .lg\:top-\[14\.341\%\] {
-    top: 14.341%;
-  }
-
-  .lg\:top-\[2\.27\%\] {
-    top: 2.27%;
-  }
-
-  .lg\:top-\[24\.42\%\] {
-    top: 24.42%;
-  }
-
-  .lg\:top-\[49\.58\%\] {
-    top: 49.58%;
-  }
-
-  .lg\:top-\[6\.7\%\] {
-    top: 6.7%;
-  }
-
-  .lg\:z-\[3\] {
-    z-index: 3;
-  }
-
-  .lg\:z-\[4\] {
-    z-index: 4;
-  }
-
-  .lg\:z-\[5\] {
-    z-index: 5;
-  }
-
-  .lg\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .lg\:mx-0 {
@@ -1758,28 +1139,20 @@ video {
     margin-bottom: auto;
   }
 
-  .lg\:mr-0 {
-    margin-right: 0px;
+  .lg\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .lg\:mt-0 {
     margin-top: 0px;
   }
 
-  .lg\:mt-20 {
-    margin-top: 5rem;
-  }
-
-  .lg\:mt-auto {
-    margin-top: auto;
-  }
-
   .lg\:mt-16 {
     margin-top: 4rem;
   }
 
-  .lg\:mb-0 {
-    margin-bottom: 0px;
+  .lg\:mt-auto {
+    margin-top: auto;
   }
 
   .lg\:block {
@@ -1802,12 +1175,12 @@ video {
     height: 370px;
   }
 
-  .lg\:h-\[64\.208rem\] {
-    height: 64.208rem;
+  .lg\:h-\[300px\] {
+    height: 300px;
   }
 
-  .lg\:h-full {
-    height: 100%;
+  .lg\:h-\[280px\] {
+    height: 280px;
   }
 
   .lg\:w-1\/2 {
@@ -1818,6 +1191,10 @@ video {
     width: 40%;
   }
 
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
   .lg\:w-3\/5 {
     width: 60%;
   }
@@ -1826,99 +1203,12 @@ video {
     width: 80%;
   }
 
-  .lg\:w-\[15\.59\%\] {
-    width: 15.59%;
-  }
-
-  .lg\:w-\[26\.82\%\] {
-    width: 26.82%;
-  }
-
-  .lg\:w-\[34\.61\%\] {
-    width: 34.61%;
-  }
-
-  .lg\:w-\[46\.4993395\%\] {
-    width: 46.4993395%;
-  }
-
-  .lg\:w-\[47\.66\%\] {
-    width: 47.66%;
-  }
-
-  .lg\:w-\[47\.95\%\] {
-    width: 47.95%;
-  }
-
-  .lg\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-
-  .lg\:w-full {
-    width: 100%;
-  }
-
   .lg\:w-60 {
     width: 15rem;
   }
 
-  .lg\:w-3\/4 {
-    width: 75%;
-  }
-
-  .lg\:flex-1 {
-    flex: 1 1 0%;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
-  }
-
-  .lg\:flex-col {
-    flex-direction: column;
-  }
-
-  .lg\:items-center {
-    align-items: center;
-  }
-
-  .lg\:justify-between {
-    justify-content: space-between;
-  }
-
-  .lg\:gap-0 {
-    gap: 0px;
-  }
-
-  .lg\:gap-16 {
-    gap: 4rem;
-  }
-
   .lg\:gap-20 {
     gap: 5rem;
-  }
-
-  .lg\:gap-28 {
-    gap: 7rem;
-  }
-
-  .lg\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .lg\:p-10 {
-    padding: 2.5rem;
-  }
-
-  .lg\:p-0 {
-    padding: 0px;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .lg\:px-32 {
@@ -1926,50 +1216,7 @@ video {
     padding-right: 8rem;
   }
 
-  .lg\:ps-0 {
-    padding-inline-start: 0px;
-  }
-
-  .lg\:text-start {
-    text-align: start;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .lg\:font-semibold {
     font-weight: 600;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:h-auto {
-    height: auto;
-  }
-
-  .xl\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .xl\:-translate-x-1\/3 {
-    --tw-translate-x: -33.333333%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-}
-
-@media (min-width: 1536px) {
-  .\32xl\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .\32xl\:-translate-x-1\/2 {
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\32xl\:p-0 {
-    padding: 0px;
   }
 }
